# scaling-bassoon

./: Config.in  README.md  external.desc  external.mk  raspberrypi3_defconfig
board/beaglebone/beaglebone-black/: bbb-genimage.cfg  linux.config  linux.config.2
board/raspberrypi/raspberry_pi3/: config.txt  genimage-raspberry_pi3.cfg  linux.config  post-image.sh  raspberrypi3_64_customconfig
board/raspberrypi/raspberry_pi4/: config.txt  genimage-raspberry_pi4.cfg  linux.config  post-build.sh  post-image.sh  user_table.txt
board/raspberrypi/raspberry_pi_zero_2w/: cmdline.txt  config.txt  linux.config  post-image.sh
configs/: beaglebone-black_4_x_defconfig  beaglebone-black_defconfig  beagleboneblack_defconfig  pocketbeagle_defconfig  raspberrypi3_defconfig  raspberrypi4_64_custom_defconfig  raspberrypi_2w_custom_defconfig
package/dosbox/: Config.in  dosbox.mk
package/dosboxx/: Config.in  dosboxx.mk  fixup
package/lcd_test/: CMakeLists.txt  Config.in  lcd_test.mk  readme.txt  st7789.c  tft  tft.c
package/lcd_test_spidev/: CMakeLists.txt  Config.in  gpio.h  lcd_test_spidev.mk  spi.cpp  spi.h  st7789.cpp  tft.cpp  utility.cpp  utility.h
package/spi_reg_read/: spi_reg_read.cpp  spi_reg_read.mk
package/web_app/: web_app.mk
raspberry_pi/: Config.in
raspberry_pi/board/raspberry_pi_zero_2w/: config.txt
raspberry_pi/configs/: raspberrypi_2w_custom_defconfig
raspberry_pi/package/spi_reg_read/: CMakeLists.txt
raspberry_pi/package/web_app/: Config.in
raspberry_pi_2w/: external.desc
raspberry_pi_2w/configs/: raspberrypi_2w_custom_defconfig
raspberry_pi_2w/package/spi_reg_read/: Config.in  spi_reg_read.cpp  spi_reg_read.mk
(+25 files in other folders)
